# unoapi-dpcpp-examples

./: .gitignore  .gitpod.yml  CMakeLists.txt  README.md  SNIPPETS-HOWTO.md  extract-data.sh  format-perf-data.sh  install-dpcpp.sh  parameter-sweep.sh  setvars.sh
.github/workflows/: oneapi-cmake.yml
bigmatrix/: CMakeLists.txt  bigmatrix.cpp
cipher/: CMakeLists.txt  file_ops.cpp  file_ops.h  main.cpp  plf_nanotimer.h  readfile.cpp  readfile.h  scramble.cpp  scramble.h  substitute.h  test.cpp  timestamps.cpp  timestamps.h
cipher/live-data/: lesmis1.txt
cipher/test-data/: ciphertext.txt  key.txt  plaintext.txt
integration/: CMakeLists.txt  f.cpp  f.h  main.cpp  test.cpp  timestamps.cpp  timestamps.h  trapezoid.cpp  trapezoid.h
matrix_mul/: CMakeLists.txt  matrix_mul_dpcpp.cpp
modern-cpp/: CMakeLists.txt  auto-mva.cpp  auto-with-stl.cpp  cli11-mva.cpp  const-constexpr.cpp  mc-triangle-threads.cpp  mc-triangle.cpp  move-mvp.cpp  point-struct.cpp  point.h  point_demo.cpp  random-hist.cpp  range1.h  sleep-coroutine.cpp  weak_ptr.cpp
modern-cpp-notetaking/: CMakeLists.txt  range1.cpp  range2.cpp
montecarlo/: CMakeLists.txt  main.cpp  result.txt  result_3_10e8_double_ranlux.txt  result_3_10e8_double_ranlux_2.txt  result_3_10e9_double.txt  result_3_10e9_double_ranlux.txt  result_3_10e9_uint64.txt
snippets/: snip-UnoAPI-f-implementation.tex  snip-UnoAPI-f-interface.tex  snip-UnoAPI-integration-test-f1.tex  snip-UnoAPI-integration-test-scaffolding.tex  snip-UnoAPI-integration-test-simple1.tex  snip-UnoAPI-integration-test-simple2.tex  snip-UnoAPI-integration-test-simple3.tex  snip-UnoAPI-main-cli-setup-and-parse.tex  snip-UnoAPI-main-compute-outer-trapezoid.tex  snip-UnoAPI-main-declarations.tex  snip-UnoAPI-main-domain-setup.tex  snip-UnoAPI-main-parallel-buffers.tex  snip-UnoAPI-main-parallel-cleanup.tex  snip-UnoAPI-main-parallel-devices.tex  snip-UnoAPI-main-parallel-gather-on-host.tex  snip-UnoAPI-main-parallel-inorder-q.tex  snip-UnoAPI-main-parallel-show-results-log.tex  snip-UnoAPI-main-parallel-submit-parallel-for.tex  snip-UnoAPI-main-parallel-submit-reduce.tex  snip-UnoAPI-main-print-function-values.tex  snip-UnoAPI-main-sequential-option.tex  snip-UnoAPI-sycl-external-interface.tex  snip-UnoAPI-timestamps-mark-time.tex  snip-UnoAPI-timestamps-print-timestamps.tex  snip-UnoAPI-trapezoid-implementation.tex  snip-UnoAPI-trapezoid-interface.tex
technical_analysis/: CMakeLists.txt  README.md  main.cpp
transitive_closure/: CMakeLists.txt  graph.cpp  graph.h  test.txt  timestamps.h  transitive_closure.cpp
wordcloud/: CMakeLists.txt  main.cpp
